--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   connectivity_plus: ^6.1.4
   flutter_local_notifications: ^19.3.0
   android_alarm_manager_plus: ^4.0.7
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.4
